<resources>
    <string name="app_name">Quit Smoking App</string>
    <string name="smoke_png">smokePNG</string>
    <string name="if_ready">Press the button if you are feeling ready!</string>
    <string name="quit_smoking_now">Quit smoking now!</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="days_hours_minutes_seconds">Days&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Hours&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Minutes&#160;&#160;&#160;&#160;&#160;&#160;&#160;Seconds</string>
    <string name="confirm_stop_timer">Are you sure you want to reset the timer?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_stop_timer_title">Confirm Reset</string>
    <string name="overall_progress">Overall Progress</string>
    <string name="days_quit">days\nquit</string>
    <string name="cigarettes_avoided">cigarettes\navoided</string>
    <string name="money_saved">money\nsaved</string>
    <string name="please_enter_how_many_cigarettes_you_smoke_per_day_and_the_cost_of_a_cigarette_pack">Please enter how many cigarettes you smoke per day and the cost of a cigarette pack:</string>
    <string name="cost_of_a_cigarette_pack">cost of a cigarette pack (₺)</string>
    <string name="button">Button</string>
    <string name="cigarettes_per_day">cigarettes per day</string>
</resources>